--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,11 @@ release:
   image:
     name: goreleaser/goreleaser
     entrypoint: [""]
+  rules:
+    - if: $CI_COMMIT_TAG
   variables:
     # Disable shallow cloning so that goreleaser can diff between tags to
     # generate a changelog.
     GIT_DEPTH: 0
   script:
-    - goreleaser release
+    - goreleaser release --clean
